# better-blender

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
blender_addon/better_blender_bridge/: __init__.py
docs/: blender-api-alignment.md  client-setup.md  milestone-board.md  spec.md
src/better_blender_mcp/: __init__.py  bridge_client.py  cli.py  config.py  mcp_server.py  protocol.py
src/better_blender_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_bridge_client.py  test_cli.py  test_config.py  test_protocol.py
tests/integration/: run_bridge.py  test_blender_integration.py
